<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/rg_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_women"
            style="@style/LanRadioBtnStyle"
            android:checked="true"
            android:text="@string/popSex_woman"/>

        <View
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            style="@style/LineHorizontalStyle"/>

        <RadioButton
            android:id="@+id/rb_men"
            style="@style/LanRadioBtnStyle"
            android:text="@string/popSex_man"/>

        <View
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            style="@style/LineHorizontalStyle"/>

        <RadioButton
            android:id="@+id/rb_secret"
            style="@style/LanRadioBtnStyle"
            android:text="@string/popSex_secret"/>
    </RadioGroup>
</LinearLayout>