<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bg_t"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical">
    
    <com.hyphenate.easeui.widget.EaseTitleBar
        android:id="@+id/title_bar"
        app:titleBarLeftImage="@drawable/back"
        app:titleBarTitle="@string/set_safe_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/security_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:paddingRight="@dimen/common.10dp"
            android:layout_alignParentRight="true"
            android:text="@string/confirm"
            android:textSize="@dimen/tx_3"
            android:textColor="@color/tx_black_1"/>
    </com.hyphenate.easeui.widget.EaseTitleBar>

    <TextView
        android:layout_marginTop="@dimen/common.40dp"
        android:layout_gravity="center"
        android:text="@string/input_safe_pwd"
        android:textSize="@dimen/tx_3"
        android:textColor="@color/tx_black_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.tg.tgt.widget.lock.KurtEditText
        android:id="@+id/kurtet"
        android:layout_marginLeft="@dimen/common.20dp"
        android:layout_marginRight="@dimen/common.20dp"
        android:layout_marginTop="@dimen/common.10dp"
        android:layout_marginBottom="@dimen/common.10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
    <TextView
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/safe_pwd_hint"
        android:textSize="@dimen/tx_4"
        android:textColor="@color/tx_black_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>
