<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_t"
    tools:context="com.tg.tgt.ui.SecurityPasswodTypeSelectActivity">

    <com.hyphenate.easeui.widget.EaseTitleBar
        android:id="@+id/title_bar"
        app:titleBarLeftImage="@drawable/back"
        app:titleBarTitle="@string/dialog_security_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></com.hyphenate.easeui.widget.EaseTitleBar>
    <LinearLayout
        android:id="@+id/linear_modify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/layout_padding"
        android:background="#FFF"
        android:layout_marginTop="@dimen/common.10dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/modify_safe_pwd"
            android:textSize="@dimen/tx_3"
            android:textColor="@color/tx_black_1"
            android:layout_gravity="center"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/layout_padding"
        android:background="#FFF"
        android:layout_marginTop="5dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset_safe_pwd"
            android:textSize="@dimen/tx_3"
            android:textColor="@color/tx_black_1"
            android:layout_gravity="center"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow"/>
    </LinearLayout>

</LinearLayout>
